tests/fail/destruct_named_dup_fail.stderr
error[E0424]: Duplicate field 'x' in shape initialization
 --> tests/fail/destruct_named_dup_fail.tk:6:34
  |
 6 |     auto Point(a = .x, b = .x) = p
  |                                  ^
error[E042C]: Elided member 'y' of shape 'Point' does not have a default value.
 --> tests/fail/destruct_named_dup_fail.tk:6:34
  |
 6 |     auto Point(a = .x, b = .x) = p
  |                                  ^
